--- a/themes/amir_personal_website/sass/site/primary/_posts-and-pages.scss
+++ b/themes/amir_personal_website/sass/site/primary/_posts-and-pages.scss
@@ -9,9 +9,11 @@
 .entery-header {
  font-family: $font__sans;
  }
+
  .cat-links {
 	 font-size: 90%;
 	 font-weight: 70;
+
 	 a {
 		 color: black;
 		 text-decoration: none;
@@ -23,9 +25,7 @@
 		 &:hover {
 			 	 color: white;
 			 	 background-color: black;
-		 }
-		 
-		 
+		 }	 
 	 }
  }
 
@@ -36,6 +36,7 @@
 	 @media screen and (min-width: $query__medium) {
 		 font-size: 3em;
 	 }
+
 	 a {
 		 text-decoration: none;
 		 color: black;
@@ -47,7 +48,9 @@
 	 }
  }
 
- .entry-meta {
+ .entry-meta,
+ .entry-footer {
+	 font-family: $font__sans;
 	 font-size: 90%;
 
 	 a{
@@ -88,6 +91,59 @@
 	display: inline;
 }
 
+.extra {
+	display: none;
+}
+
+/* Custom Post Meta rules for single post / no sidebar. */
+
+.no-sidebar {
+	
+	.entry-meta {
+		margin-top: 1.5em;
+	}
+
+	@media screen and (min-width: $query__medium) {
+		.post-content__wrap {
+
+			.entry-meta {
+				margin-top: 2.25em;
+				font-size: 80%;
+
+				a {
+					font-size: 110%;
+					display: block;
+					border-bottom: 3px solid white;
+
+					&:hover,
+					&:focus {
+						border-bottom-color: black;
+					}
+				}
+			}
+
+			.byline,
+			.posted-on,
+			.comments-link,
+			.edit-link {
+				display: block;
+				margin-bottom: 1em;
+
+				&:before,
+				&:after {
+					margin: 0;
+					content: "";
+				}
+			}
+
+			.extra {
+				display: inline;
+			}	
+		}
+
+	}
+}
+
 .page-content,
 .entry-content,
 .entry-summary {
@@ -97,4 +153,9 @@
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
+}
+
+.entry-footer {
+	margin: 1.5em 0;
+	font-family: $font__sans;
 }
