--- a/themes/amir_personal_website/style.css
+++ b/themes/amir_personal_website/style.css
@@ -772,7 +772,7 @@ a:hover, a:active {
 }
 
 @media screen and (min-width: 900px) {
-	.has-sidebar .hentry {
+	.single.has-sidebar .hentry {
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
@@ -782,22 +782,22 @@ a:hover, a:active {
 		    -ms-flex-pack: justify;
 		        justify-content: space-between;
 	}
-	.has-sidebar .hentry .entry-header {
+	.single.has-sidebar .hentry .entry-header {
 		width: 100%;
 		-webkit-box-flex: 1;
 		    -ms-flex: 1 0 100%;
 		        flex: 1 0 100%;
 	}
-	.has-sidebar .hentry .post-content {
+	.single.has-sidebar .hentry .post-content {
 		width: 60%;
 	}
-	.has-sidebar .hentry .widget-area {
+	.single.has-sidebar .hentry .widget-area {
 		width: 30%;
 	}
 }
 
 @media screen and (min-width: 900px) {
-	.no-sidebar .post-contet__wrap {
+	.single.no-sidebar .post-contet__wrap {
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
@@ -805,12 +805,76 @@ a:hover, a:active {
 		    -ms-flex-pack: justify;
 		        justify-content: space-between;
 	}
-	.no-sidebar .post-contet__wrap .entry-meta {
+	.single.no-sidebar .post-contet__wrap .entry-meta {
 		width: 20%;
 	}
-	.no-sidebar .post-contet__wrap .post-content__body {
+	.single.no-sidebar .post-contet__wrap .post-content__body {
 		width: 70%;
 	}
+}
+
+/*--------------------------------------------------------------
+## Archives
+--------------------------------------------------------------*/
+.archive-view {
+	background-color: #eee;
+}
+
+.post {
+	background: white;
+}
+
+.post__content {
+	padding: 2em 2em 3em;
+}
+
+@media screen and (min-width: 900px) {
+	.has-sidebar .site-content {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
+		-ms-flex-wrap: wrap;
+		    flex-wrap: wrap;
+	}
+	.has-sidebar .content-area {
+		width: 60%;
+	}
+	.has-sidebar .widget-area {
+		width: 30%;
+	}
+}
+
+.index-image img {
+	display: block;
+	margin: 0 auto;
+}
+
+.index-image a:focus > img,
+.index-image a:hover > img {
+	opacity: 0.8;
+}
+
+.continue-reading {
+	position: absolute;
+	left: 10rem;
+	bottom: auto;
+	font-family: "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+}
+
+.continue-reading a {
+	display: block;
+	padding: .5em 1em;
+	font-size: 90%;
+	text-decoration: none;
+	background: #d9d9d9;
+}
+
+.continue-reading a:focus, .continue-reading a:hover {
+	color: white;
+	background: black;
 }
 
 /*--------------------------------------------------------------
