--- a/themes/amir_personal_website/sass/site/archive/_archive.scss
+++ b/themes/amir_personal_website/sass/site/archive/_archive.scss
@@ -2,7 +2,8 @@
   background-color: #eee;
 }
 
-.post {
+.post,
+.page {
   background: white;
 }
 
@@ -43,19 +44,46 @@
 .archive-description{
   margin: -1em 0 2em;
 }
+
+/* For content-none.php */
+.search,
+.error-404 {
+	
+	.page-content {
+		margin-bottom: 2em;
+		padding: 1em 2em;
+		font-family: $font__sans;
+		color: white;
+		background: black;
+	}
+	
+	input[type="search"] {
+		padding: .5em;
+	}
+	input[type="submit"] {
+		border-color: white;
+		color: white;
+		
+		&:focus,
+		&:hover {
+			color: black;
+		}
+	}
+}
+
 //.sticky is not working
 .sticky::before {
-  content: "";
-  display: block;
-  width: 2em;
-  height: 2em;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border-width: 0 2em 2em 0;
-  border-color: #eee #eee white;
-  border-style: solid;
-  box-shadow: -1px 2px 2px hsla(0,0%, 10%, .1);
+    content: "";
+    display: block;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-width: 0 2em 2em 0;
+    border-color: #eee #eee white;
+    border-style: solid;
+    box-shadow: -1px 2px 2px hsla(0, 0%, 10%, .1);
 }
 
 .index-image {
