--- a/themes/amir_personal_website/style.css
+++ b/themes/amir_personal_website/style.css
@@ -855,7 +855,8 @@ a:hover, a:active {
 	background-color: #eee;
 }
 
-.post {
+.post,
+.page {
 	background: white;
 }
 
@@ -898,6 +899,33 @@ a:hover, a:active {
 
 .archive-description {
 	margin: -1em 0 2em;
+}
+
+/* For content-none.php */
+.search .page-content,
+.error-404 .page-content {
+	margin-bottom: 2em;
+	padding: 1em 2em;
+	font-family: "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+	color: white;
+	background: black;
+}
+
+.search input[type="search"],
+.error-404 input[type="search"] {
+	padding: .5em;
+}
+
+.search input[type="submit"],
+.error-404 input[type="submit"] {
+	border-color: white;
+	color: white;
+}
+
+.search input[type="submit"]:focus, .search input[type="submit"]:hover,
+.error-404 input[type="submit"]:focus,
+.error-404 input[type="submit"]:hover {
+	color: black;
 }
 
 .sticky::before {
