added header and footer customizer in wordpress back-end

--- a/themes/amir_personal_website/sass/navigation/_content-navigation.scss
+++ b/themes/amir_personal_website/sass/navigation/_content-navigation.scss
@@ -123,4 +123,16 @@
 		font-weight: 600;
 		color: black;
 	}
+
+	.prev .icon {
+		margin-right: 0.5em;
+		height: .7em;
+		width: .7em;
+	}
+
+	.next .icon {
+		margin-left: .5em;
+		height: .7em;
+		width: .7em;
+	}
 }
