--- a/themes/amir_personal_website/style.css
+++ b/themes/amir_personal_website/style.css
@@ -699,6 +699,18 @@ a:hover, a:active {
 	color: black;
 }
 
+.pagination .prev .icon {
+	margin-right: 0.5em;
+	height: .7em;
+	width: .7em;
+}
+
+.pagination .next .icon {
+	margin-left: .5em;
+	height: .7em;
+	width: .7em;
+}
+
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
@@ -1656,10 +1668,56 @@ button.dropdown-toggle {
 	text-align: center;
 }
 
+.site-footer a {
+	font-weight: 700;
+	color: white;
+	text-decoration: none;
+}
+
+.site-footer a:hover, .site-footer a:focus {
+	text-decoration: underline;
+}
+
 @media screen and (min-width: 600px) {
 	.site-footer {
 		padding: 1em 2em;
 	}
+}
+
+.site-footer__wrap {
+	max-width: 1080px;
+	margin: 0 auto;
+}
+
+@media screen and (min-width: 900px) {
+	.site-footer__wrap {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
+	}
+}
+
+.site-info {
+	margin: 1em 0 1em auto;
+	-ms-flex-item-align: center;
+	    -ms-grid-row-align: center;
+	    align-self: center;
+}
+
+@media screen and (min-width: 900px) {
+	.site-info {
+		text-align: right;
+	}
+	.site-info span {
+		display: block;
+	}
+}
+
+.social-menu {
+	margin: 1em 0;
 }
 
 .social-menu ul {
@@ -1669,6 +1727,8 @@ button.dropdown-toggle {
 	-webkit-box-pack: center;
 	    -ms-flex-pack: center;
 	        justify-content: center;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -1679,10 +1739,18 @@ button.dropdown-toggle {
 	padding: .5em 1em;
 	color: white;
 	text-decoration: none;
+	opacity: .6;
 }
 
 .social-menu ul a:hover, .social-menu ul a:focus {
 	text-decoration: underline;
+	opacity: 1;
+}
+
+.social-menu ul a svg {
+	height: 3em;
+	margin: 0;
+	display: block;
 }
 
 /*--------------------------------------------------------------
